@@ -11,4 +11,13 @@ RSpec.configure do
   def fixture_file path
     File.join fixtures_dir, path
   end
+
+  def with_memory_logger level = nil
+    old_logger, logger = Asciidoctor::LoggerManager.logger, Asciidoctor::MemoryLogger.new
+    logger.level = level if level
+    Asciidoctor::LoggerManager.logger = logger
+    yield logger
+  ensure
+    Asciidoctor::LoggerManager.logger = old_logger
+  end
 end
